<resources>
    <string name="app_name" translatable="false">PhotoAdapterExample</string>

    <string name="fullScreenMode">Full screen mode</string>
    <string name="fullScreenMode_description">When turned on, the camera will be stretched to full screen and the navigation buttons will be hidden</string>

    <string name="fillPreview">Fill the camera preview</string>
    <string name="fillPreview_description">When turned on, the camera will fill in the preview. When turned off, it will be fit into the screen based on the camera dimensions</string>

    <string name="allowToggleFit">Allow to switch the fit mode</string>
    <string name="allowToggleFit_description">In the corner of the screen there will be a button to switch modes: fit preview / fill preview of the camera</string>

    <string name="previewImage">Preview image</string>
    <string name="previewImage_description">After taking a photo, you will be able to view result of the photo to make sure that the photo is not blurred, with the option to delete it.</string>

    <string name="facingBack">Facing back</string>
    <string name="facingBack_description">Using the phone\'s rear camera, if available, Otherwise-a front-facing camera for taking selfies.</string>

    <string name="changeCameraAllowed">Change camera allowed</string>
    <string name="changeCameraAllowed_description">Allow you to switch the camera between the back and front.</string>

    <string name="showBackButton">Show back button</string>
    <string name="showBackButton_description">If enabled, there will be back arrow in top left corner of screen.</string>

    <string name="allowMultipleImages">Multiple images taking</string>
    <string name="allowMultipleImages_description">Allow you to take several photos per session, with the return of an array of images.</string>

    <string name="useSnapshot">Use snapshot</string>
    <string name="useSnapshot_description">Instead of actually taking photos and waiting for the camera to return the image, a snapshot of the area that displays the image is used.\nMuch faster than a real photo, does not give the sound of taking a photo, but the size of the photo is limited by the size of the screen. Also, you cannot turn on the auto flash, only torch mode allowed.</string>

    <string name="flipFrontal">Mirror frontal result picture</string>
    <string name="flipFrontal_description">Usually frontal photos need to be mirrored in order to be displayed to the user. If you uncheck this box, the photos will remain original, without mirroring.</string>

    <string name="blurOnSwitch">Blur when switching cameras</string>
    <string name="blurOnSwitch_description">In the Camera2 implementation, a black background is displayed when switching cameras. This checkbox allows you to show a blurred snapshot from the last camera instead.</string>

    <string name="saveToGallery">Save to phone gallery also</string>
    <string name="saveToGallery_description">Allows you to save photos, in addition to the app\'s memory, also to the phone\'s gallery for the user.</string>

    <string name="lockRotate">Lock rotate screen</string>
    <string name="lockRotate_description">Blocks rotation of the camera activity and redrawing of the view when the phone is rotated.</string>

    <string name="forceCamera1">Force Camera1 implementation</string>
    <string name="forceCamera1_description">The old camera implementation for Android 4 devices. Does not support multiple cameras on the same phone facing, may not support optical stabilization and other improvements. If turned off, Google\'s CameraX implementation will be used if possible on current device</string>

    <string name="gallery">Gallery</string>
    <string name="preview">Preview</string>
    <string name="toast_permission_rejected">Permission was not granted</string>
</resources>
