<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <CheckBoxPreference
        android:key="fullScreenMode"
        android:summary="@string/fullScreenMode_description"
        android:title="@string/fullScreenMode"
        android:defaultValue="false"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="fitMode"
        android:title="@string/fitMode"
        android:summary="@string/fitMode_description"
        android:defaultValue="false"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="previewImage"
        android:title="@string/previewImage"
        android:summary="@string/previewImage_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="facingBack"
        android:title="@string/facingBack"
        android:summary="@string/facingBack_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="changeCameraAllowed"
        android:title="@string/changeCameraAllowed"
        android:summary="@string/changeCameraAllowed_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="allowMultipleImages"
        android:title="@string/allowMultipleImages"
        android:summary="@string/allowMultipleImages_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="useSnapshot"
        android:title="@string/useSnapshot"
        android:summary="@string/useSnapshot_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="saveToGallery"
        android:title="@string/saveToGallery"
        android:summary="@string/saveToGallery_description"
        android:defaultValue="false"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="lockRotate"
        android:title="@string/lockRotate"
        android:summary="@string/lockRotate_description"
        android:defaultValue="true"
        app:iconSpaceReserved="false">
    </CheckBoxPreference>
</PreferenceScreen>